# fisheyesea

./: .env.template  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  launch-with-etl.bash  launch.bash  main.py  pyproject.toml
app/: data.py  env.py  main.py  models.py
backend/: pyproject.toml
config/: .env.example  logging.yml
db/: .env.template  docker-compose.yml
frontend/: package-lock.json
src/: main.py
src/etl/: api.py  mongo.py
src/models/: fishingeffort.py
src/routers/: countries.py  fishingefforts.py
src/services/: etl.py  log.py  util.py
src/services/db/: duck.py  mongo.py
